Creation de la page Enigme et la page Wakanda

--- a/Acceuil/acceuil.html
+++ b/Acceuil/acceuil.html
@@ -24,9 +24,9 @@
                     </a>
                 </div>
                 <ul>
-                    <li><a href="">ACCEUIL</a></li>
-                    <li><a href="">WAKANDA</a></li>
-                    <li><a href="">ENIGME</a></li>
+                    <li><a href="../Acceuil/acceuil.html" target="_blank">ACCEUIL</a></li>
+                    <li><a href="../Wakanda/wakanda.html" target="_blank">WAKANDA</a></li>
+                    <li><a href="../Enigme/enigme.html" target="_blank">ENIGME</a></li>
                 </ul>
             </nav>
         </header>
