Petite mise a jour

--- a/Wakanda/wakanda.html
+++ b/Wakanda/wakanda.html
@@ -77,7 +77,7 @@
             <!-- La troisième section -->
             <section id="origine2">
                 <div class="container">
-                    <div>
+                    <div class="first">
                         <div>
                             <a href="https://www.youtube.com/watch?v=ts30OG3Qld0"><img src="../Assets/Wakanda-img/icon_player.png" alt=""></a>
                             <a href="https://www.youtube.com/watch?v=gMLh7wS5Dsw"><img src="../Assets/Wakanda-img/icon_player.png" alt=""></a>
@@ -90,7 +90,7 @@
                         <p>Enfin Jelani Cobb, dans The New Yorker, a estimé que T'Challa et Killmonger représentaient « des réponses en duel à cinq siècles d'exploitation africaine aux mains de l'Occident. Le méchant, dans la mesure où le terme s'applique, est l'histoire elle-même ». Cobb ajoute que Black Panther a une portée politique différente des précédents films MCU dans lesquels « nous étions au moins clairs sur l'endroit où les lignes de la fantaisie se sont éloignées de la réalité [alors que ce film se déroule] dans une nation inventée en Afrique, un continent qui a été aux prises avec des versions inventées de lui-même depuis que les hommes blancs l'ont déclaré pour la première fois continent noir et ont commencé à piller son peuple et ses ressources.</p>
                     </div>
 
-                    <div>
+                    <div class="second">
                         <div>
                             <h2>Force militaire</h2>
                             <p>Le Wakanda possède sûrement une des plus puissantes armées au monde, des mesures ayant été prises pour en dissimuler sa véritable puissance militaire, pour ainsi éviter des réactions agressives de la part d'autres nations. Le pays possède des forces spécialisées comme la Garde de la Panthère (ou la « Meute des Panthères »), l'unité des « Hatut Zeraze » (ou « Chiens de Guerre ») qui formaient la police secrète du pays (« officiellement » dissoute) ou encore les « Dora Milaje », la garde personnelle du roi.</p>
